# graphrag-evaluator

./: README.md
agent-framework-samples/: .env.examples  main.py  pyproject.toml
agent-framework-samples/.devcontainer/: devcontainer.json  setup.sh
agent-framework-samples/00.ForBeginners/: 0.python-basicagents.ipynb  1.python-tooling.ipynb
agent-framework-samples/00.ForBeginners/01-intro-to-ai-agents/code_samples/: python-agent-framework-travelagent.ipynb
agent-framework-samples/00.ForBeginners/03-agentic-design-patterns/code_samples/: 0.python-agent-framework-ghmodel-basicagent.ipynb  1.python-agent-framework-aifoundry-file-search.ipynb  3.[WIP]workflow-multi-agents-events.ipynb  python-agent-framework-ghmodel-basicagent.ipynb
agent-framework-samples/00.ForBeginners/05-agentic-rag/code_samples/: python-agent-framework-aifoundry-file-search.ipynb
agent-framework-samples/02.CreateYourFirstAgent/code_samples/python/: python-travelagent-ghmodel.ipynb
agent-framework-samples/03.ExploerAgentFramework/code_samples/dotNET/: 01-dotnet-agent-framework-aoai.ipynb  02-dotnet-agent-framrwork-ghmodel.ipynb  03-dotnet-agent-framework-aifoundry.ipynb  04-dotnet-agent-framework-foundrylocal.ipynb
agent-framework-samples/05.Providers/code_samples/python/: 01-python-agent-framework-aifoundry-mcp.ipynb
agent-framework-samples/06.RAGs/code_samples/dotNET/: dotnet-agent-framework-aifoundry-file-search.ipynb
agent-framework-samples/1. Samples/: 0.python-basic-agents.ipynb  0.python-basicagents.ipynb  2.[WIP]python-agent-framrwork-ghmodel-planningdesign.ipynb  2.python-workflows.ipynb  3.python-workflows-conditionnal.ipynb  _utils.py
agent-framework-samples/2. Advanced/2. tracer_aspire/: simple.py
agent-framework-samples/2. Advanced/3. a_agent_workflows/: agent.yaml
agent-framework-samples/2. Advanced/3. basic_agent_workflow_devui/: main.py
agent-framework-samples/2. Advanced/4. declarative_agent/: get_weather_agent.py
agent-framework-samples/2. Advanced/5. azd/: azure.yaml
agent-framework-samples/a_agent_workflows/: main.py  test.http
agents/: .env.example  ag_ui_client.py  pyproject.toml  server.py
red-teaming/: .env.example  app_config.py  main.py  pyproject.toml  settings.toml
red-teaming/assets/: data.jsonl
red-teaming/config/: assets_loader.py
red-teaming/services/: call_agent.py
red-teaming/utils/: env_utils.py
test-eval/: .env.example  ARCHITECTURE.md  PIPELINE_README.md  SUMMARY.md  app_config.py  evaluator_workflow.py  main.py  main.py.backup  main_setup.py  pyproject.toml  settings.toml
test-eval/config/: __init__.py  aoai_config.py  assets_loader.py  evaluation_config.py  model_factory.py
test-eval/config/__archive__/: aoai_config.py  evaluation_config.py
test-eval/evaluators/: __init__.py  abstract_evaluator.py  custom_metrics_evaluator.py  retrieval_evaluator.py
test-eval/examples/: __init__.py  custom_evaluator_example.py
test-eval/graph_sdk/: __init__.py  graph_context.py  graph_explorer.py
test-eval/graph_sdk/search_builder/: drift_search_builder.py
test-eval/pipeline/: __init__.py  evaluation_pipeline.py
test-eval/sample-gpt4/: .env.example  settings.yaml
test-eval/sample-gpt4/output/: communities.parquet  community_reports.parquet  text_units.parquet
test-eval/sample-gpt5/: .env.example  settings.yaml
test-eval/sample-gpt5/output/: communities.parquet  documents.parquet  stats.json  text_units.parquet
test-eval/services/: __init__.py
test-eval/services/graphrag/: __init__.py  search_service.py
test-eval/tests/: test_evaluators.py
test-eval/utils/: __init__.py  concurrency.py  config.py  json_utils.py  pretty_print.py
tools/graphrag-mcp/: .env.example  README.md  pyproject.toml  server.py
tools/graphrag-mcp/test/: agent.py
(+787 files in other folders)
