[project]
name = "agent-framework-samples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agent-framework[viz]==1.0.0b251114",
    "agent-framework-core==1.0.0b251007",
    "azure-ai-agents>=1.2.0b5",
    "azure-ai-agentserver-agentframework==1.0.0b3",
    "azure-ai-projects==1.1.0b4",
    "graphviz>=0.21",
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
known_first_party = ["agent_framework"]
known_third_party = ["azure", "openai", "dotenv"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
import_heading_stdlib = ""
import_heading_thirdparty = ""
import_heading_firstparty = ""
import_heading_localfolder = ""

[dependency-groups]
dev = [
    "azure-ai-agentserver-core>=1.0.0b5",
]
