[project]
name = "agent-framework-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp",
    "agent-framework-ag-ui",
    "ag-ui-protocol"
]

[dependency-groups]
dev = [
    "agent-framework>=1.0.0b251120",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "debugpy>=1.8.0"
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py", "*_test.py", "agent.py", "tool_usage.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
markers = [
    "asyncio: mark test as an async test",
    "integration: mark test as an integration test (requires MCP server running)",
]
